--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -520,4 +520,5 @@
     <string name="detailed_sales_history">Detailed sales history</string>
     <string name="sales_summary">Sales Summary</string>
     <string name="guest_customer">Guest Customer</string>
+    <string name="view_all">View all</string>
 </resources>
