--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -521,4 +521,5 @@
     <string name="sales_summary">Sales Summary</string>
     <string name="guest_customer">Guest Customer</string>
     <string name="view_all">View all</string>
+    <string name="error_cash_collected_required">Please enter cash collected</string>
 </resources>
