--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,7 +173,7 @@
     <string name="customer_update_success">Customer updated successfully!</string>
     <string name="title_activity_reward_customers">Redeem</string>
     <string name="redemption_code">Six digit code</string>
-    <string name="enter_code">Enter code</string>
+    <string name="enter_reset_token">Enter token</string>
     <string name="error_redemption_code_required">Please enter six digit code</string>
     <string name="error_redemption_code_incorrect">Code is incorrect</string>
     <string name="error_redemption_code_length">Code must be six digits</string>
@@ -363,18 +363,19 @@
     <string name="start_sale_btn_label">Record a Sale</string>
     <string name="start_adding_customers_label">Start Adding Customers</string>
     <string name="submit">Submit</string>
-    <string name="i_have_code_already">I have a reset code</string>
+    <string name="i_have_password_reset_token">I have a reset token</string>
     <string name="pwd_reset_msg">Sending password reset instructions. Please wait&#8230;</string>
-    <string name="prompt_password_reset_code">Reset Code</string>
+    <string name="prompt_password_reset_token">Token</string>
     <string name="prompt_new_password">New Password</string>
     <string name="error_reset_code_required">Please enter reset code</string>
     <string name="error_confirm_password_required">Please confirm password</string>
+    <string name="filter_view_http_loystar">Loystar Http</string>
     <string name="error_reset_password">Sorry we couldn\'t reset your password. Please try again later.</string>
     <string name="error_reset_password_code_expired">Sorry! The reset password code has expired. Please request for a new code.</string>
     <string name="password_reset_success">Your password has been successfully reset. Please login to Loystar with your new password.</string>
     <string name="pwd_reset_in_progress_msg">Just a second. Resetting your password.</string>
     <string name="reset_code_instructions">We have sent you a password reset code. Please retrieve it and use it on the next screen to reset your password.</string>
-    <string name="reset_pass_header_text">Submit your email address and we\'ll send you a code to reset your password.</string>
+    <string name="reset_pass_header_text">Submit your email address and we\'ll send you instructions to reset your password.</string>
     <string name="title_invalid_email">Invalid email</string>
     <string name="feedback_pwdreset_noemail">No account registered with email:  </string>
 
@@ -525,4 +526,5 @@
     <string name="view_sales_history">View Sales History</string>
     <string name="total_sales_for_today_label">(Total sales today)</string>
     <string name="error_cash_collected_amount">Cash collected should not be lower than total charge</string>
+    <string name="reset_password_email_set">Reset password  instructions sent.</string>
 </resources>
