--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -528,4 +528,5 @@
     <string name="error_cash_collected_amount">Cash collected should not be lower than total charge</string>
     <string name="reset_password_email_set">Reset password  instructions sent.</string>
     <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://app.loystar.co\",\n  }\n}]</string>
+    <string name="product_not_found">Product is missing!</string>
 </resources>
