--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -532,4 +532,5 @@
     <string name="product_not_found">Product is missing!</string>
     <string name="sale_detail">Sale details</string>
     <string name="title_activity_add_points">Add Points</string>
+    <string name="no_sale_recorded">No Sale Recorded</string>
 </resources>
