--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,7 +173,7 @@
     <string name="customer_update_success">Customer updated successfully!</string>
     <string name="title_activity_reward_customers">Redeem</string>
     <string name="redemption_code">Six digit code</string>
-    <string name="enter_reset_token">Enter token</string>
+    <string name="enter_reset_token">Enter reset code</string>
     <string name="error_redemption_code_required">Please enter six digit code</string>
     <string name="error_redemption_code_incorrect">Code is incorrect</string>
     <string name="error_redemption_code_length">Code must be six digits</string>
@@ -349,7 +349,7 @@
     <string name="profile_update_success">Profile was successfully updated!</string>
     <string name="first_name">First name</string>
     <string name="error_email_required">Please enter email</string>
-    <string name="account_with_phone_exists">Phone number exists with another account. Please login to continue.</string>
+    <string name="account_with_phone_exists">Oops! This Phone number is already registered. Please login with your email and password.</string>
     <string name="confirm_password">Confirm password</string>
     <string name="finish">Finish</string>
     <string name="privacy_policy_txt">By tapping \'Finish\', you agree to our Privacy Policy.</string>
@@ -363,9 +363,9 @@
     <string name="start_sale_btn_label">Record a Sale</string>
     <string name="start_adding_customers_label">Start Adding Customers</string>
     <string name="submit">Submit</string>
-    <string name="i_have_password_reset_token">I have a reset token</string>
+    <string name="i_have_password_reset_token">I have a reset code</string>
     <string name="pwd_reset_msg">Sending password reset instructions. Please wait&#8230;</string>
-    <string name="prompt_password_reset_token">Token</string>
+    <string name="prompt_password_reset_token">reset code</string>
     <string name="prompt_new_password">New Password</string>
     <string name="error_reset_code_required">Please enter reset code</string>
     <string name="error_confirm_password_required">Please confirm password</string>
