--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,9 @@
     <string name="menuitem_sync">Sync now</string>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="share_general">Share</string>
+    <string name="share_whatsapp">Share Via Whatsapp</string>
+
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
