--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -4,4 +4,5 @@
     <string name="invoice">Invoice</string>
     <string name="payment_message">Payment Message</string>
     <string name="create_invoice_text">Create Invoice</string>
+    <string name="expired_now_text">Your account has expired</string>
 </resources>
