--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,6 +185,7 @@
     <string name="select_loyalty_program">Select loyalty program</string>
     <string name="select_loyalty_program_short">Select program</string>
     <string name="select_one_prompt">Select one</string>
+    <string name="select_category_prompt">Select Category</string>
     <string name="error_select_customer">Please select customer</string>
     <string name="error_loyalty_program_required">Please select loyalty program</string>
     <string name="total_customer_points">Total Customer Points:</string>
