--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,9 +185,11 @@
     <string name="select_loyalty_program">Select loyalty program</string>
     <string name="select_loyalty_program_short">Select program</string>
     <string name="select_one_prompt">Select one</string>
+    <string name="select_unit_prompt">Select Unit</string>
     <string name="select_category_prompt">Select Category</string>
     <string name="error_select_customer">Please select customer</string>
     <string name="error_loyalty_program_required">Please select loyalty program</string>
+    <string name="error_stock_unit_required">Please select a stock unit</string>
     <string name="total_customer_points">Total Customer Points:</string>
     <string name="program_target">Program Target</string>
     <string name="total_customer_stamps">Total Customer Stamps</string>
@@ -582,5 +584,8 @@
     <string name="expired_now_text">Your account has expired</string>
     <string name="expire_today_text">Your account would expire today</string>
     <string name="login_as_staff_text">Login as Staff</string>
+    <string name="description_text">Description</string>
+    <string name="stock_unit_text">Stock Unit</string>
+    <string name="product_quantity_text">Product Quantity</string>
 
 </resources>
